--- a/chessbot/CMakeLists.txt
+++ b/chessbot/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("chessbot")
 
 # Add source to this project's executable.
-add_executable (chessbot "chessbot.cpp" "chessbot.h" "board.cpp" "board.h")
+add_executable (chessbot "chessbot.cpp" "chessbot.h" "board.cpp" "board.h" "ai.h" "ai.cpp")
 
 # TODO: Add tests and install targets if needed.
